Update : update chapter 02

--- a/데이터베이스 개론 (2판).md
+++ b/데이터베이스 개론 (2판).md
@@ -24,7 +24,7 @@
 
 ### 2. 정보 시스템과 데이터베이스
 
-> 정보 시스템 Information System, 
+> 정보 시스템 Information System, 경영 정보 시스템 MIS:Management Information System , 
 
 - Information System 정보 시스템 : 조직 운영에필요한 데이터를 수집하여 저장해두었다가 의사 결정이 필요할 때 처리하여 유용한 정보를 만들어주는 수단, 정보 시스템 안에서 데이터를 저장하고 있다가 필요할 때 제공하는 핵심 역할은 데이터베이스가 담당
 - 
@@ -35,6 +35,20 @@
 
 ## 03. 데이터와 데이터베이스
 
+*Summary*
+
+- 데이터와 정보
+- 정보처리, 정보 시스템, 데이터베이스
+- 데이터베이스의 정의
+- 데이터베이스의 특징
+- 데이터의 분류 : 정형 데이터, 반정형 데이터, 비정형 데이터
+
+
+
+
+
+
+
 # Chp 02.데이터베이스 관리 시스템
 ## 01. 데이터베이스 관리 시스템의 등장 배경
 
@@ -44,7 +58,13 @@
 
 ## 04. 데이터베이스 관리 시스템의 발전 과정
 
+<br/>
 
+**Summary**
+
+
+
+<br/>
 
 # Chp 03. 데이터베이스 시스템
 
